# dagster-pyiceberg

./: .gitignore  .justfile  .pre-commit-config.yaml  README.md  mkdocs.yml  pyproject.toml
.devcontainer/: Dockerfile
.github/workflows/: build.yaml  docs.yaml  release.yaml
.github/workflows/templates/pyright_type_checks/: action.yaml
.github/workflows/templates/release/utils/bump_version/: Dockerfile  action.yaml  bump_version.py  requirements.txt
.github/workflows/templates/tests/: action.yaml
docs/: code_reference.md  features.md  index.md  installation.md  quickstart.md  reference.md
docs/examples/: pandas.md  polars.md
docs/snippets/: io_manager_daft.py  io_manager_pandas.py  io_manager_polars.py  io_manager_pyarrow.py  multiple_io_managers.py  multiple_schemas.py  partitions_multiple.py  partitions_static.py  partitions_time.py  pyiceberg_resource.py  select_columns.py  table_properties.py
examples/: howto.md  partitioned_dag.py  simple_dag.py  table_with_properties.py
src/dagster_pyiceberg/: __init__.py  config.py  handler.py  io_manager.py  resource.py
src/dagster_pyiceberg/_db_io_manager/: utils.py
src/dagster_pyiceberg/_utils/: __init__.py  io.py  partitions.py  properties.py  retries.py  schema.py
src/dagster_pyiceberg/io_manager/: __init__.py  arrow.py  base.py  daft.py  pandas.py  polars.py
tests/: conftest.py  test_handler.py  test_io_manager.py  test_resource.py
tests/_db_io_manager/: test_db_io_manager.py  test_db_io_manager_utils.py
tests/_utils/: conftest.py  test_io.py  test_partitions.py  test_properties.py  test_schema.py  test_transforms.py
tests/dagster_pyiceberg/: conftest.py  test_custom_db_io_manager.py  test_handler.py  test_io_manager.py  test_resource.py
tests/dagster_pyiceberg/_db_io_manager/: test_db_io_manager.py  test_db_io_manager_utils.py  test_io_manager.py
tests/dagster_pyiceberg/_utils/: conftest.py  test_io.py  test_partitions.py  test_schema.py  test_transforms.py
tests/dagster_pyiceberg/io_managers/: test_arrow_io_manager.py  test_daft_io_manager.py  test_polars_io_manager.py
tests/dagster_pyiceberg_pandas/: conftest.py  test_pyiceberg_pandas_type_handler.py
tests/dagster_pyiceberg_polars/: conftest.py  test_pyiceberg_polars_type_handler.py
tests/io_managers/: test_arrow_io_manager.py  test_base_io_manager.py  test_daft_io_manager.py  test_pandas_io_manager.py  test_polars_io_manager.py
