[project]
name = "dagster-pyiceberg-project"
version = "0.0.0"
description = "Libraries that provide Dagster IO managers for PyIceberg."
authors = [
  {name="Jasper Ginn", email="jasperginn@gmail.com"}
]
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
    "tenacity>=8.5.0",
]

[tool.uv]
dev-dependencies = [
    "pre-commit>=3.8.0",
    "ipykernel>=6.29.5",
    "pytest>=8.3.2",
    "pyright>=1.1.385",
    # These are added as dev dependencies becuase they should be available
    #  when developing the project.
    "dagster_pyiceberg",
    "dagster_pyiceberg_pandas",
    "pytest-coverage>=0.0",
]
package = false

[tool.uv.workspace]
members = [
  "packages/*"
]

[tool.uv.sources]
dagster_pyiceberg = { workspace = true }
dagster_pyiceberg_pandas = { workspace = true }

[tool.black]
line-length = 88
exclude = '''
^/(
  (
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.venv
    | _build
    | build
    | dist
    | .notebooks
    | .nox
  )
)
'''

[tool.isort]
profile = "black"
extend_skip = [".notebooks", ".nox", ".venv"]

[tool.mypy]
exclude = "^.notebooks/"
ignore_missing_imports = true
explicit_package_bases = true

[tool.bandit]
skips = ['B101']

[tool.ruff]
lint.ignore = ["E501"]
extend-exclude = [
  "__pycache__",
  "docs",
  "site",
  ".nox",
  ".notebooks"
]

[tool.pytest.ini_options]
cache_dir = "/home/vscode/workspace/.cache/pytest"

[tool.pyright]
include = ["packages"]
pythonVersion = "3.11"
venvPath = "."
venv = ".venv"
